alignment issue

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ h1 {
   border: 1px solid #de57e5;
   margin-left: 30%;
   margin-top: 10%;
+  word-wrap: break-word;
 }
 .heroimg {
   padding-top: 30%;
